# Sendai

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
notes/: test_gtlf_notes.txt
src/assets/: dds_loader.c  dds_loader.h  gltf.c  gltf.h
src/core/: arena.c  arena.h  camera.c  camera.h  engine.c  engine.h  grid.c  grid.h  log.c  log.h  memory.c  memory.h  pch.h  scene.c  scene.h  timer.c  timer.h
src/dx_helpers/: barrier_helpers.h  desc_helpers.h
src/error/: error.c  error.h
src/gui/: gui.c  gui.h
src/renderer/: billboard.c  billboard.h  cubemap.c  cubemap.h  light.c  light.h  render_types.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h
src/shaders/gltf/: billboard.hlsl  gltf.hlsl  pbr.hlsl
src/shaders/nuklear/: nuklear_d3d12.h  nuklear_d3d12.hlsl  nuklear_d3d12_pixel_shader.h  nuklear_d3d12_vertex_shader.h
src/shaders/sendai/: billboard.hlsl  bistro.hlsl  equirect_to_cube.hlsl  gltf.hlsl  grid.hlsl  irradiance_convolution.hlsl  pbr.hlsl  shader_defs.h  skybox.hlsl
src/ui/: sendai_nk.c  sendai_nk.h  ui.c  ui.h  ui_bottom_panel.c  ui_bottom_panel.h  ui_tool_bar.c  ui_tool_bar.h  ui_top_bar.c  ui_top_bar.h
src/win32/: file_dialog.c  file_dialog.h  str_helper.h  win_main.c  win_path.c  win_path.h  window.c  window.h
